--- a/app/src/main/res/layout/activity_find_psw.xml
+++ b/app/src/main/res/layout/activity_find_psw.xml
@@ -76,7 +76,7 @@
         android:layout_marginRight="35dp"
         android:id="@+id/btn_validate"
         android:background="@drawable/register_selector"
-        android:text="验 证"
+        android:text="设 置"
         android:textColor="@android:color/white"
         android:textSize="18sp"/>
 
