--- a/app/src/main/res/layout/activity_find_psw.xml
+++ b/app/src/main/res/layout/activity_find_psw.xml
@@ -54,19 +54,65 @@
         android:singleLine="true"
         android:textColor="#000000"
         android:textColorHint="#a3a3a3"/>
+
     <TextView
+        android:id="@+id/tv_reset_psw"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:text="输入你的新密码"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:visibility="gone"
+        />
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:id="@+id/et_input_psw"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:background="@drawable/find_psw_icon"
+        android:hint="请输入要设置的新密码"
+        android:paddingLeft="8dp"
+        android:singleLine="true"
+        android:textColor="#000000"
+        android:textColorHint="#a3a3a3"
+        android:visibility="gone"/>
+
+<!--    <TextView
         android:id="@+id/tv_reset_psw"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:text=""
+        android:text="输入你的新密码"
         android:gravity="center_vertical"
         android:textColor="@android:color/white"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:visibility="gone"
         />
+
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:id="@+id/et_input_psw"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:background="@drawable/find_psw_icon"
+        android:hint="请输入要设置的新密码"
+        android:inputType="textPassword"
+        android:paddingLeft="8dp"
+        android:singleLine="true"
+        android:textColor="#000000"
+        android:textColorHint="#a3a3a3"
+        android:visibility="gone" />-->
+
     <Button
         android:layout_width="fill_parent"
         android:layout_height="40dp"
