--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -32,6 +31,7 @@
             android:src="@drawable/default_icon" />
     </RelativeLayout>
 
+    //一条用于隔离的下划线
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
